tests/ui/view-types/syntax-errors.stderr
error: expected parameter name, found `{`
  --> $DIR/syntax-errors.rs:10:30
   |
LL |     fn not_a_field(&mut self.{ _ }, _: &mut Foo.{ _ }) {}
   |                              ^ expected parameter name

error: expected one of `)` or `,`, found `.`
  --> $DIR/syntax-errors.rs:10:29
   |
LL |     fn not_a_field(&mut self.{ _ }, _: &mut Foo.{ _ }) {}
   |                             ^
   |                             |
   |                             expected one of `)` or `,`
   |                             help: missing `,`

error: expected identifier, found reserved identifier `_`
  --> $DIR/syntax-errors.rs:10:51
   |
LL |     fn not_a_field(&mut self.{ _ }, _: &mut Foo.{ _ }) {}
   |                                                   ^ expected identifier, found reserved identifier

error: expected parameter name, found `{`
  --> $DIR/syntax-errors.rs:15:26
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ for }) {}
   |                          ^ expected parameter name

error: expected one of `)` or `,`, found `.`
  --> $DIR/syntax-errors.rs:15:25
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ for }) {}
   |                         ^
   |                         |
   |                         expected one of `)` or `,`
   |                         help: missing `,`

error: expected identifier, found keyword `for`
  --> $DIR/syntax-errors.rs:15:51
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ for }) {}
   |                                                   ^^^ expected identifier, found keyword
   |
help: escape `for` to use it as an identifier
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ r#for }) {}
   |                                                   ++

error: expected parameter name, found `{`
  --> $DIR/syntax-errors.rs:20:27
   |
LL |     fn no_comma(&mut self.{ bar baz }, _: &mut Foo.{ bar baz }) {}
   |                           ^ expected parameter name

error: expected one of `)` or `,`, found `.`
  --> $DIR/syntax-errors.rs:20:26
   |
LL |     fn no_comma(&mut self.{ bar baz }, _: &mut Foo.{ bar baz }) {}
   |                          ^
   |                          |
   |                          expected one of `)` or `,`
   |                          help: missing `,`

error: expected one of `,` or `}`, found `baz`
  --> $DIR/syntax-errors.rs:20:58
   |
LL |     fn no_comma(&mut self.{ bar baz }, _: &mut Foo.{ bar baz }) {}
   |                                                         -^^^ expected one of `,` or `}`
   |                                                         |
   |                                                         help: missing `,`

error: aborting due to 9 previous errors

